Updates (#60)
* Fix some out of date elements

* Update codemc

* Added test classes

* Added test class

* Make everything buildable

* Update to Java 21 and MC 1.21.3

* Add JavaDocs

* Update GitHub build script to Java 21

* Added JavaDoc

* Added JavaDoc

* Added comments to config.yml

* Refactor tests to use JUnit 5 and MockBukkit; update dependencies in pom.xml

* Update API version to 1.21 and enhance JavaDoc comments in addon classes